Intento de busqueda por cantidad