@@ -4,11 +4,14 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.mongodb.MongoWriteException;
 import com.mongodb.client.*;
+import com.mongodb.client.model.Aggregates;
 import com.mongodb.client.model.Filters;
+import com.mongodb.client.model.TextSearchOptions;
 import com.mongodb.client.model.Updates;
 import com.mongodb.client.result.InsertOneResult;
 import org.bson.Document;
 import org.bson.conversions.Bson;
+import org.educa.entity.PasajeroEntity;
 import org.educa.entity.ReservaEntity;
 import org.educa.entity.ReservaWithRelations;
 import org.educa.settings.DatabaseSettings;
@@ -18,18 +21,17 @@ import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-
-import static com.mongodb.client.model.Aggregates.*;
 import static com.mongodb.client.model.Filters.eq;
 
 public class ReservaDAOImpl implements ReservaDAO {
-    private static final String COLLECTION= "reservas";
+    private static final String COLLECTION_RESERVAS = "reservas";
+    private static final String COLLECTION_PASAJEROS = "pasajeros";
     private final Gson gson = new GsonBuilder().create();
     @Override
     public Integer save(ReservaEntity reserva) {
         try (MongoClient mongoClient= MongoClients.create(DatabaseSettings.getURL())){
             MongoDatabase mongoDatabase= mongoClient.getDatabase(DatabaseSettings.getDB());
-            MongoCollection<Document> mongoCollection= mongoDatabase.getCollection(COLLECTION);
+            MongoCollection<Document> mongoCollection= mongoDatabase.getCollection(COLLECTION_RESERVAS);
             String json = gson.toJson(reserva);
             InsertOneResult ior = mongoCollection.insertOne(Document.parse(json));
             if (ior.getInsertedId()!=null) {
@@ -47,7 +49,7 @@ public class ReservaDAOImpl implements ReservaDAO {
         List<ReservaEntity> reservas = new ArrayList<>();
         try(MongoClient mongoClient = MongoClients.create(DatabaseSettings.getURL())) {
             MongoDatabase mongoDatabase = mongoClient.getDatabase(DatabaseSettings.getDB());
-            MongoCollection<Document> mongoCollection = mongoDatabase.getCollection(COLLECTION);
+            MongoCollection<Document> mongoCollection = mongoDatabase.getCollection(COLLECTION_RESERVAS);
             FindIterable<Document> findIterable = mongoCollection.find();
             for (Document doc : findIterable) {
                 reservas.add(gson.fromJson(doc.toJson(), ReservaEntity.class));
@@ -60,7 +62,7 @@ public class ReservaDAOImpl implements ReservaDAO {
     public ReservaEntity findById(int id) {
         try(MongoClient mongoClient = MongoClients.create(DatabaseSettings.getURL())) {
             MongoDatabase mongoDatabase = mongoClient.getDatabase(DatabaseSettings.getDB());
-            MongoCollection<Document> mongoCollection = mongoDatabase.getCollection(COLLECTION);
+            MongoCollection<Document> mongoCollection = mongoDatabase.getCollection(COLLECTION_RESERVAS);
             Document doc= mongoCollection.find(eq("_id",id)).first();
             if (doc != null) {
                 return gson.fromJson(doc.toJson(), ReservaEntity.class);
@@ -74,10 +76,10 @@ public class ReservaDAOImpl implements ReservaDAO {
     public Long update(ReservaEntity reservaToUpdate) {
         try(MongoClient mongoClient= MongoClients.create(DatabaseSettings.getURL())){
             MongoDatabase mongoDatabase= mongoClient.getDatabase(DatabaseSettings.getDB());
-            MongoCollection<Document> mongoCollection= mongoDatabase.getCollection(COLLECTION);
-            Bson filter= Filters.eq("_id",reservaToUpdate.getId());
+            MongoCollection<Document> mongoCollection= mongoDatabase.getCollection(COLLECTION_RESERVAS);
+            Bson filter= eq("_id",reservaToUpdate.getId());
             List<Bson> lista= Arrays.asList(
-                    Updates.set("precio",reservaToUpdate.getPrecio()),
+                    Updates.set("precio",reservaToUpdate.getPrecio().doubleValue()),
                     Updates.set("asiento",reservaToUpdate.getAsiento()),
                     Updates.set("estado",reservaToUpdate.getEstado())
 
@@ -89,21 +91,73 @@ public class ReservaDAOImpl implements ReservaDAO {
 
     @Override
     public Long delete(int id) {
-        return 0L;
+        try(MongoClient mongoClient= MongoClients.create(DatabaseSettings.getURL())) {
+            MongoDatabase mongoDatabase = mongoClient.getDatabase(DatabaseSettings.getDB());
+            MongoCollection<Document> mongoCollection = mongoDatabase.getCollection(COLLECTION_RESERVAS);
+            Bson filter= eq("_id",id);
+
+            return mongoCollection.deleteOne(filter).getDeletedCount();
+        }
     }
 
     @Override
     public List<ReservaEntity> findReservasByVueloId(Integer vueloId) {
+
         return List.of();
     }
 
     @Override
     public InfoPasajero findReservasByPasaporte(String pasaporte) {
+        List<ReservaWithRelations> reservas= new ArrayList<>();
+        try(MongoClient mongoClient = MongoClients.create(DatabaseSettings.getURL())) {
+            MongoDatabase mongoDatabase = mongoClient.getDatabase(DatabaseSettings.getDB());
+            MongoCollection<Document> collectionPasajeros = mongoDatabase.getCollection(COLLECTION_PASAJEROS);
+            MongoCollection<Document> collectionReservas = mongoDatabase.getCollection(COLLECTION_RESERVAS);
+            Bson filter= Filters.text(pasaporte);
+            Document doc= collectionPasajeros.find(filter).first();
+            PasajeroEntity pasajero= gson.fromJson(doc.toJson(), PasajeroEntity.class);
+            InfoPasajero infoPasajero = new InfoPasajero();
+            infoPasajero.setPasajero(pasajero);
+
+            List<Bson> pipeline = Arrays.asList(
+                    Aggregates.match(Filters.gte("pasajero_id",pasajero.getId())),
+                    Aggregates.lookup("vuelos","vuelo_id","_id","vuelo"),
+                    Aggregates.lookup("pasajeros","pasajero_id","_id","pasajero"),
+                    Aggregates.unwind("$vuelo"),
+                    Aggregates.unwind("$pasajero")
+            );
+
+            AggregateIterable<Document> docs = collectionReservas.aggregate(pipeline);
+            for(Document document: docs){
+                ReservaWithRelations reserva = gson.fromJson(document.toJson(), ReservaWithRelations.class);
+                reservas.add(reserva);
+            }
+
+        }
+
         return null;
     }
 
     @Override
     public List<ReservaWithRelations> findReservasByCantidad(BigDecimal cantidad) {
-        return List.of();
+        List<ReservaWithRelations> reservas= new ArrayList<>();
+        try(MongoClient mongoClient = MongoClients.create(DatabaseSettings.getURL())) {
+            MongoDatabase mongoDatabase = mongoClient.getDatabase(DatabaseSettings.getDB());
+            MongoCollection<Document> mongoCollection = mongoDatabase.getCollection(COLLECTION_RESERVAS);
+            List<Bson> pipeline = Arrays.asList(
+                    Aggregates.match(Filters.gte("precio",cantidad.doubleValue())),
+                    Aggregates.lookup("vuelos","vuelo_id","_id","vuelo"),
+                    Aggregates.lookup("pasajeros","pasajero_id","_id","pasajero"),
+                    Aggregates.unwind("$vuelo"),
+                    Aggregates.unwind("$pasajero")
+            );
+
+            AggregateIterable<Document> docs = mongoCollection.aggregate(pipeline);
+            for(Document doc: docs){
+                ReservaWithRelations reserva = gson.fromJson(doc.toJson(), ReservaWithRelations.class);
+                reservas.add(reserva);
+            }
+        }
+        return reservas;
     }
 }
